--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,7 @@
+# Top-most EditorConfig file
 root = true
 
+# Default settings for all files
 [*]
 charset = utf-8
 end_of_line = lf
@@ -8,6 +10,13 @@ trim_trailing_whitespace = true
 indent_style = tabs
 indent_size = 4
 
+# HTML, CSS, JSON, YAML (2 spaces for web stuff)
+[*.{html,htm,css,js,jsx,ts,tsx,json,yml,yaml}]
+indent_style = space
+indent_size = 2
+
 # Markdown: keep intentional trailing spaces
 [*.md]
+indent_style = space
+indent_size = 2
 trim_trailing_whitespace = false
